# PetMo

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
auths/: urls.py  views.py
bookmarks/: models.py  serializers.py  urls.py  views.py
bookmarks/migrations/: 0001_initial.py  0002_initial.py  0002_remove_bookmark_post_bookmark_post.py  0003_initial.py  0004_bookmark_mark.py
categories/: admin.py  models.py  serializers.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
images/migrations/: 0001_initial.py  0002_initial.py
likes/: admin.py  models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_postlike_post.py  0005_alter_commentlike_comment.py  0006_delete_commentlike.py
pets/: admin.py  models.py  serializers.py
pets/migrations/: 0001_initial.py  0002_alter_pet_animaltypes.py  0002_initial.py  0003_remove_pet_owner.py  0004_alter_pet_species.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_image.py  0002_initial.py  0003_delete_image.py  0003_remove_post_comments.py  0003_rename_commment_comment.py  0004_post_comments.py  0004_post_likes.py  0004_post_visited.py  0005_alter_comment_post.py  0005_remove_post_likes.py  0005_rename_visited_post_watcher.py  0006_alter_comment_parent_comment.py  0006_post_likes.py  0007_remove_post_comments_post_comments.py  0007_remove_post_likes.py  0012_image.py  (+18 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+9 files in other folders)
